--- a/src/Makefile
+++ b/src/Makefile
@@ -10,5 +10,5 @@ buildSO:
 	gcc -c -fPIC PuiusGUI.c -o bin/PuiusGUI.o
 	gcc bin/PuiusGUI.o -shared -o bin/libpuiusgui.so
 install:
-	sudo cp bin/libpuiusgui.so /usr/local/lib/libpuiusgui.so
-	sudo cp include/PuiusGUI.h /usr/local/include/puiusgui/PuiusGUI.h
+	cp bin/libpuiusgui.so /usr/local/lib/libpuiusgui.so
+	cp include/PuiusGUI.h /usr/local/include/puiusgui/PuiusGUI.h
