--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,9 @@
 CFLAGS=`sdl2-config --cflags`
 
+ifeq ($(PREFIX),)
+    PREFIX := /usr/local
+endif
+
 buildTest:
 	gcc -Wall -c main.c -o bin/test.o
 	gcc PuiusGUI.c -Wall bin/test.o -lSDL2_image -lSDL2_ttf `sdl2-config --libs` -o bin/endProduct -lm
@@ -9,9 +13,8 @@ run:
 buildSO:
 	gcc -c -fPIC PuiusGUI.c -o bin/PuiusGUI.o
 	gcc bin/PuiusGUI.o -shared -o bin/libpuiusgui.so
-buildDLL:
-	gcc -c PuiusGUI.c
-	gcc -shared -o libpuiusgui.dll PuiusGUI.o
-install:
-	cp bin/libpuiusgui.so /usr/local/lib/libpuiusgui.so
-	cp include/PuiusGUI.h /usr/local/include/puiusgui/PuiusGUI.h
+install: bin/libpuiusgui.so
+	install -d $(DESTDIR)$(PREFIX)/lib/
+	install -m 644 bin/libpuiusgui.so $(DESTDIR)$(PREFIX)/lib/
+	install -d $(DESTDIR)$(PREFIX)/include/
+	install -m 644 include/PuiusGUI.h $(DESTDIR)$(PREFIX)/include/
